[gd_scene load_steps=3 format=3 uid="uid://btjv6kteur8ff"]

[ext_resource type="Script" path="res://src/topbar/TopbarMenu.gd" id="1_pfu8f"]
[ext_resource type="Script" path="res://src/topbar/RecentProjects.gd" id="2_6f7uf"]

[node name="TopbarMenu" type="Panel"]
custom_minimum_size = Vector2(0, 32)
offset_right = 1152.0
offset_bottom = 32.0
script = ExtResource("1_pfu8f")

[node name="MenuItems" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 24)
layout_mode = 0
offset_left = 5.0
offset_right = 485.0
offset_bottom = 31.0
rotation = 0.00105019

[node name="File" type="MenuButton" parent="MenuItems"]
layout_mode = 2
text = "File"

[node name="Edit" type="MenuButton" parent="MenuItems"]
layout_mode = 2
text = "Edit"

[node name="Select" type="MenuButton" parent="MenuItems"]
layout_mode = 2
text = "Select"

[node name="Modify" type="MenuButton" parent="MenuItems"]
layout_mode = 2
text = "Filter"

[node name="View" type="MenuButton" parent="MenuItems"]
layout_mode = 2
text = "View"

[node name="Window" type="MenuButton" parent="MenuItems"]
layout_mode = 2
text = "Window
"

[node name="Help" type="MenuButton" parent="MenuItems"]
layout_mode = 2
text = "Help"

[node name="Submenu" type="PopupMenu" parent="."]
position = Vector2i(-9999, -9999)
mouse_passthrough = true
hide_on_item_selection = false
hide_on_checkable_item_selection = false
script = ExtResource("2_6f7uf")

[connection signal="id_pressed" from="Submenu" to="Submenu" method="_on_id_pressed"]
[connection signal="item_pressed" from="Submenu" to="." method="_on_submenu_item_pressed"]
